--- a/index.css
+++ b/index.css
@@ -73,7 +73,9 @@ a {
     flex-direction: column;
     /* Arrange children in a column */
 }
-
+a{
+    text-decoration: none;
+}
 .res-card:hover {
     border: 1px dashed #2a2a2a;
     cursor: pointer;
@@ -210,9 +212,10 @@ h5 {
 
 .menu-card-image img {
     width: 250px;
-    height: auto;
+    height: 180px;
     border-radius: 10px;
     margin-right: 20px;
+    object-fit: cover;
 }
 
 .menu-card-details {
@@ -240,4 +243,99 @@ h5 {
 .menu-card-details .more {
     color: #007bff;
     cursor: pointer;
+}
+/* User Card */
+.userCard{
+    border: 1px solid black;
+    width: 500px;
+    padding: 10px;
+    border-radius: 10px;
+}
+/* Food */
+
+
+.container-fd {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh; */
+    /* background-color: #f5f5f5; */
+}
+
+.recipe-card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    max-width: 800px;
+    /* transition: transform 0.3s; */
+}
+
+/* .recipe-card:hover {
+    transform: scale(1.05);
+} */
+
+.recipe-image {
+    width: 100%;
+    height: auto;
+}
+
+.recipe-content {
+    display: flex;
+    padding: 20px;
+}
+
+.recipe-left, .recipe-right {
+    flex: 1;
+    padding: 10px;
+}
+
+.recipe-left {
+    border-right: 1px solid #ddd;
+}
+
+.recipe-name {
+    font-size: 24px;
+    color: #333;
+}
+
+.recipe-category, .recipe-tags {
+    font-size: 14px;
+    color: #666;
+    margin: 5px 0;
+}
+
+.recipe-ingredients {
+    list-style-type: none;
+    padding: 0;
+    text-align: left;
+    margin: 10px 0;
+}
+
+.recipe-ingredients li {
+    background-color: #f0f0f0;
+    margin: 5px 0;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.recipe-description {
+    font-size: 16px;
+    color: #555;
+    margin: 10px 0;
+}
+
+.get-meal-button {
+    background-color: #ff6347;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.get-meal-button:hover {
+    background-color: #e5533d;
 }
